Fixed tabs wrapping issue on mobile

--- a/scss/_concept_problem.scss
+++ b/scss/_concept_problem.scss
@@ -572,6 +572,13 @@
     {
         font-size: 0.5rem !important;
     }
+    .ru-answer span {
++        display: block;
++    }
++    .ru-answer a,
++    .tabs.ru_tabs dd a {
++        padding: 6px !important;
++    }
 }
 
 .ru-answer-orbit-slide
